--- a/bwstyles.css
+++ b/bwstyles.css
@@ -239,7 +239,7 @@ h2{
     font-size: 30px;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     color: #fff;
-    text-align: left, top;
+    text-align: left;
     padding: 20px 0px 0px 20px;
 }
 .services p{
@@ -417,7 +417,7 @@ h2{
         font-size: 30px;
         font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
         color: #fff;
-        text-align: left, top;
+        text-align: left;
         padding: 20px 0px 0px 20px;
     }
     .services p{
