--- a/final/css/styles.css
+++ b/final/css/styles.css
@@ -79,6 +79,7 @@
 }
 /* Content Colors */
 /* Examples for how to change button colors */
+
 .btn-warning{
     background-color: #E0AA0F !important;
     border-color: #E0AA0F;
@@ -87,14 +88,6 @@
 .btn-warning:hover{
     border-color: #E0AA0F  !important;
     color: #002B3B;
-}
-.btn-primary{
-    background-color: #002B3B !important;
-    border-color: #002B3B;
-}
-.btn-primary:hover{
-    border-color: #002B3B !important;
-    color: #fefefe;
 }
 .btn-danger{
     background-color: #E71D2A !important;
@@ -262,4 +255,80 @@
 #carouselOma .carousel-control-next-icon {
     background-color: transparent;
     filter: drop-shadow(2px 2px 5px rgba(0, 0, 0, 0.75));
+}
+/* Custom Button */
+.btn-primary {
+    color: #fefefe;
+    background-color: #7D193E;
+    border-color: #701637;
+}
+
+.btn-primary:hover {
+    color: #fefefe;
+    background-color: #641431;
+    border-color: #8A274B;
+}
+
+.btn-primary:focus,
+.btn-primary.focus {
+    box-shadow: 0 0 0 .2rem rgba(91, 194, 194, 0.5)
+}
+
+.btn-primary.disabled,
+.btn-primary:disabled {
+    color: #212529;
+    background-color: #7D193E;
+    border-color: #701637;
+}
+
+.btn-primary:not(:disabled):not(.disabled):active,
+.btn-primary:not(:disabled):not(.disabled).active,
+.show>.btn-primary.dropdown-toggle {
+    color: #fefefe;
+    background-color: #97365A;
+    border-color: #57112b;
+}
+
+.btn-primary:not(:disabled):not(.disabled):active:focus,
+.btn-primary:not(:disabled):not(.disabled).active:focus,
+.show>.btn-primary.dropdown-toggle:focus {
+    box-shadow: 0 0 0 .2rem rgba(164, 72, 106, 0.5)
+}
+
+.btn-outline-primary {
+    color: #7D193E;
+    background-color: transparent;
+    background-image: none;
+    border-color: #7D193E;
+}
+
+.btn-outline-primary:hover {
+    color: #222;
+    background-color: #8A274B;
+    border-color: #7D193E;
+}
+
+.btn-outline-primary:focus,
+.btn-outline-primary.focus {
+    box-shadow: 0 0 0 .2rem rgba(164, 72, 106, 0.5)
+}
+
+.btn-outline-primary.disabled,
+.btn-outline-primary:disabled {
+    color: #7D193E;
+    background-color: transparent;
+}
+
+.btn-outline-primary:not(:disabled):not(.disabled):active,
+.btn-outline-primary:not(:disabled):not(.disabled).active,
+.show>.btn-outline-primary.dropdown-toggle {
+    color: #212529;
+    background-color: #8A274B;
+    border-color: #7D193E;
+}
+
+.btn-outline-primary:not(:disabled):not(.disabled):active:focus,
+.btn-outline-primary:not(:disabled):not(.disabled).active:focus,
+.show>.btn-outline-primary.dropdown-toggle:focus {
+    box-shadow: 0 0 0 .2rem rgba(151, 54, 90, 0.5)
 }
