--- a/final/css/styles.css
+++ b/final/css/styles.css
@@ -30,9 +30,7 @@
     text-decoration: underline;
     text-decoration-thickness: 2px;
     text-underline-offset: 10px;
-}
-.active{
-    color: #EADE8B !important;
+    color: #EADE8B !important
 }
 /* Mastheads */
 #masthead {
@@ -44,22 +42,6 @@
     justify-content: flex-start;
     align-items: center;
 }
-/* #masthead-light {
-    background-image: url(../images/chatt-sil-light-300ppi.png);
-    background-size: cover;
-    background-position: bottom center;
-    height: 800px;
-}
-#masthead-dark{
-    background-image: url(../images/chatt-sil-300ppi.png);
-    background-size: cover;
-    background-position: bottom center;
-    height: 800px;
-} */
-
-
-
-
 /* Content Colors */
 .purple-content{
     background-color: #7D193E;
@@ -67,7 +49,7 @@
 }
 .orange-content{
     background-color: #E76C42;
-    color: #fefefe;
+    color: #000;
 }
 .yellow-content{
     background-color: #FDF1D2;
@@ -79,7 +61,6 @@
 }
 /* Content Colors */
 /* Examples for how to change button colors */
-
 .btn-warning{
     background-color: #E0AA0F !important;
     border-color: #E0AA0F;
@@ -256,6 +237,7 @@
     background-color: transparent;
     filter: drop-shadow(2px 2px 5px rgba(0, 0, 0, 0.75));
 }
+/* Carousels */
 /* Custom Button */
 .btn-primary {
     color: #fefefe;
@@ -332,3 +314,35 @@
 .show>.btn-outline-primary.dropdown-toggle:focus {
     box-shadow: 0 0 0 .2rem rgba(151, 54, 90, 0.5)
 }
+/* Custom Button */
+/* Animated Elements */
+.animated-element {
+    opacity: 0;
+    transform: translateY(20px);
+    transition: opacity 1s ease-in-out, transform 1s ease-in-out;
+}
+.animated-element.active {
+    opacity: 1;
+    transform: translateY(0);
+}
+
+.animated-element-no-move {
+    opacity: 0;
+    transition: opacity 1s ease-in-out, transform 1s ease-in-out;
+}
+
+.animated-element-no-move.active {
+    opacity: 1;
+    transform: translateY(0);
+}
+
+.animated-element-slow {
+    opacity: 0;
+    transition: opacity 1s ease-in-out 1s, transform 1s ease-in-out 2s;
+}
+
+.animated-element-slow.active {
+    opacity: 1;
+    transform: translateY(0);
+}
+/* Animated Elements */
